# e-mail-factory

./: AUTHORS  COPYING  INSTALL  Makefile.am  README  autogen.sh  configure.ac
e-util/: Makefile.am  Makefile.in  e-misc-utils.c  e-misc-utils.h  e-util.h
libegdbus/: Makefile.am  e-gdbus-emailfolder.c  e-gdbus-emailfolder.h  e-gdbus-emailoperation.c  e-gdbus-emailoperation.h  e-gdbus-emailsession.c  e-gdbus-emailsession.h  e-gdbus-emailstore.c  e-gdbus-emailstore.h
libemail-engine/: .e-mail-session.c.swp  Makefile.am  Makefile.in  e-mail-folder-utils.c  e-mail-session-utils.c  em-vfolder-rule.h  mail-ops.c
po/: POTFILES.in
src/: Makefile.am  e-dbus-manager.c  e-mail-data-folder.c  e-mail-data-folder.xml  e-mail-data-operation.c  e-mail-data-operation.h  e-mail-data-operation.xml  e-mail-data-session.c  e-mail-data-session.h  e-mail-data-session.xml  e-mail-data-store.c  e-mail-data-store.h  e-mail-data-store.xml  evolution-mail-factory.desktop.in  mail-send-recv.c  mail-send-recv.h  mail-send-short-msg.c  mail-send-short-msg.h  main.c  test-email-client.c  utils.c  utils.h
